Fix cards printing bad text alignment

--- a/site/resources/sass/_cards.scss
+++ b/site/resources/sass/_cards.scss
@@ -177,6 +177,10 @@
     .transcription-row > td {
         padding: 0;
     }
+
+    .speech {
+        white-space: pre;
+    }
 }
 
 #card, #print-card {
